--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -9,7 +9,6 @@
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
-
 .contact-form-container h1 {
   font-size: 24px;
   font-weight: bold;
@@ -74,4 +73,21 @@
 .thank-you-message p {
   font-size: 16px;
   color: #444;
+}
+.home{
+  width: 100%;
+  padding: 10px;
+  background-color: #1d3557;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.home a{
+  text-decoration: none;
+  color: white;
+}
+.home:hover {
+  background-color: #3a5d72;
 }
