--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,15 +1,104 @@
+
 .footer {
-  background-color: #0d021f; 
-  color: white;
-  text-align: center;
-  padding: 10px 0;
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
   font-family: Arial, sans-serif;
-  font-size: 14px;
-  
-  margin-top: 0px;
 }
 
-.code-icon {
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+  margin-bottom: 20px;
+}
+
+.footer-title {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  
+}
+
+.footer-links li {
+  margin: 5px 0;
+ 
+}
+
+
+.footer-section h3 {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+.footer-section p {
+  font-size: 1em;
+  margin: 5px 0;
+  color: #888;
+}
+
+
+.follow-me-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 0.9em;
   color: #a3a3ff; 
-  margin: 0 5px; 
+
+  
+}
+
+
+.footer-links li a {
+  color: #888;
+  text-decoration: none;
+}
+
+.footer-links li a:hover {
+  color: #ee8c0c;
+}
+.line{
+  background-color: #888;
+}
+
+
+@media (max-width: 768px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer-section {
+    min-width: 100%;
+  }
+
+  .footer-title {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .social-links {
+    gap: 10px;
+  }
 }
