--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,7 +1,6 @@
 .main-website{
 background-color: rgb(228, 244, 244);
 padding-top: 4rem;
-padding-bottom: 25px;
  
 }
 .about-heading{
@@ -27,6 +26,7 @@ padding-bottom: 25px;
   max-width: 800px;
   background: rgb(241, 244, 245);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 50px;
 }
 
 .home-container {
