--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -3,8 +3,19 @@
   background-color: #121212;
   color: #fff;
   text-align: center;
-  padding: 40px 20px;
+ 
+  padding-top: 40px;
+  
+
   font-family: Arial, sans-serif;
+}
+.skills-section h1::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #ff2f00;
+  margin: 8px auto;
 }
 
 .skills-title {
@@ -23,6 +34,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  margin-bottom: 50px;
 }
 
 .skill-card {
@@ -32,6 +44,7 @@
   width: 120px;
   text-align: center;
   transition: transform 0.3s;
+ 
 }
 
 .skill-card:hover {
